// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-11 {
  color: #574feb !important;
}

<div
  class="emotion-6 emotion-1 emotion-11 test fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`overrides InputField.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-9 {
  background-color: red;
}

<div
  class="emotion-9 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly when disabled 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        disabled=""
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly when loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-8.emotion-8 {
  font-size: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  height: 2.75em;
  margin: 0 0.75em;
  top: 0;
  right: 0;
  z-index: 2;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  padding-right: 2.3em;
}

.emotion-7 {
  color: #212121 !important;
}

.emotion-5 {
  line-height: 1rem;
  font-size: 20px;
}

.emotion-4 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-3 {
  stroke-dasharray: 275;
  stroke-dashoffset: 200px;
  stroke: #212121;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<div
  class="emotion-12 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-11 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
      <div
        class="emotion-5 emotion-1 emotion-7 emotion-8 fp-InputSpinner fp-Box fp-Spinner"
      >
        <svg
          class="emotion-4 fp-Spinnervector"
          viewBox="22 22 44 44"
        >
          <circle
            class="emotion-3 fp-SpinnerloaderCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-11 {
  background-color: #574feb !important;
}

<div
  class="emotion-6 emotion-1 emotion-11 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render large correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 1.5rem;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render medium correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 1.25rem;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render small correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 0.875rem;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render danger correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #fbe7e7 0px 0px 0px 2px !important;
  border-color: #f3b9b9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #da1717;
  box-shadow: #fbe7e7 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="true"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render primary correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render success correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #e6f2ea 0px 0px 0px 2px !important;
  border-color: #b5d8c1;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #0a7d33;
  box-shadow: #e6f2ea 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render warning correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #fdf5e8 0px 0px 0px 2px !important;
  border-color: #f9e1bc;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #ed9c22;
  box-shadow: #fdf5e8 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render date correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="date"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render email correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="email"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render number correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render password correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="password"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render search correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="search"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render tel correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="tel"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render time correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="time"
      />
    </div>
  </div>
</div>
`;

exports[`props types should render url correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="url"
      />
    </div>
  </div>
</div>
`;

exports[`theming InputField.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-9 {
  background-color: red;
}

<div
  class="emotion-9 emotion-1 emotion-2 fp-Box fp-InputField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-InputWrapper fp-Box"
    >
      <input
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;
